gitops/apps/flag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: togglemaster
spec:
  type: ClusterIP
  selector:
    app: flag-service
  ports:
    - port: 80
      targetPort: 8002
      name: http
